Added all pages

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Icarus Wealth - Investment Platform</title>
-
+    <link rel="shortcut icon" href="./favicon.png" type="image/x-icon">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -30,26 +30,27 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav mx-auto">
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">Home</a>
+                            <a class="nav-link active" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Education Hub</a>
+                            <a class="nav-link" href="education-hub.html">Education Hub</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Investment</a>
+                            <a class="nav-link" href="investment.html">Investment</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About us</a>
+                            <a class="nav-link" href="about-us.html">About us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
+                            <a class="nav-link" href="contact.html">Contact</a>
                         </li>
                     </ul>
-
-                    <a class="btn btn-custom btn-green">
-                        Get Started
-                        <img src="images/icons/rocket-icon.svg" alt="rocket-icon" class="btn-icon bg-white">
-                    </a>
+                    <div class="d-flex justify-content-center align-items-center">
+                        <a href="contact.html" class="btn btn-custom btn-green mx-lg-0 mx-auto">
+                            Get Started
+                            <img src="images/icons/rocket-icon.svg" alt="rocket-icon" class="btn-icon bg-white">
+                        </a>
+                    </div>
                 </div>
             </div>
         </nav>
@@ -61,7 +62,7 @@
             <div class="container">
                 <h1 class="hero-title">Simplify Your Investment Journey</h1>
                 <p class="hero-subtitle mt-3 mb-5">One platform to manage, grow, and educate your financial future.</p>
-                <a class="btn btn-custom btn-white btn-lg ">
+                <a href="contact.html" class="btn btn-custom btn-white btn-lg ">
                     Get Started <img src="images/icons/rocket-white.svg" alt="rocket-icon" class="btn-icon bg-primary">
                 </a>
             </div>
@@ -210,7 +211,7 @@
 
                 <div class="feature-box one my-md-5 my-sm-4 my-3">
                     <div class="row align-items-stretch justify-content-between">
-                        <div class="col-lg-5">
+                        <div class="col-lg-5 d-flex align-items-center">
                             <div class="content-wrapper">
                                 <div class="feature-icon-wrapper">
                                     <img src="images/icons/smartphone.svg" alt="smartphone">
@@ -229,10 +230,10 @@
 
                 <div class="feature-box two my-md-5 my-sm-4 my-3">
                     <div class="row align-items-stretch justify-content-between flex-wrap-reverse">
-                        <div class="col-lg-5 pt-lg-5">
+                        <div class="col-lg-5 d-flex align-items-center pt-lg-5">
                             <img src="images/feature-two.png" alt="feature" class="h-100 w-auto img-fluid feature-img">
                         </div>
-                        <div class="col-lg-5">
+                        <div class="col-lg-5 d-flex align-items-center">
                             <div class="content-wrapper">
                                 <div class="feature-icon-wrapper">
                                     <img src="images/icons/layers.svg" alt="smartphone">
@@ -248,7 +249,7 @@
 
                 <div class="feature-box one my-md-5 my-sm-4 my-3 pe-lg-0">
                     <div class="row align-items-stretch justify-content-between">
-                        <div class="col-lg-5">
+                        <div class="col-lg-5 d-flex align-items-center">
                             <div class="content-wrapper">
                                 <div class="feature-icon-wrapper">
                                     <img src="images/icons/star.svg" alt="star">
@@ -474,7 +475,7 @@
                                 <img src="images/cta-image.png" alt="CTA image" class="w-100 img-fluid">
                             </div>
                             <div class="col-lg-6 d-flex flex-column justify-content-center cta-content-wrapper">
-                                <h2 class="sec-title text-white">Smarter Way to Grow Your Wealth</h2>
+                                <h2 class="sec-title text-white fw-medium">Smarter Way to Grow Your Wealth</h2>
                                 <p class="para text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                                     sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
                                 <div class="d-flex align-items-center gap-3">
@@ -525,7 +526,7 @@
                                 <li><a href="#">About us</a></li>
                             </ul>
                         </div>
-                        <div class="col-lg-6">
+                        <div class="col-lg-6 mt-md-0 mt-sm-4 mt-3">
                             <h5 class="f-title">Supprot</h5>
                             <ul class="list-unstyled f-links">
 
@@ -538,15 +539,18 @@
                 <div class="col-lg-3 col-md-6 col-12 my-md-0 my-sm-4 my-3">
                     <h5 class="f-title">Connect</h5>
                     <ul class="list-unstyled f-links">
-                        <li><a href="#" class="d-flex align-items-center"><i class="fa-solid fa-phone"></i>+91 0000 000 000</a></li>
-                        <li><a href="#" class="d-flex align-items-center"><i class="fa-solid fa-envelope"></i>Johndeo123@gmail.com</a></li>
-                        <li><a href="#"><i class="fa-solid fa-location-dot"></i>234 Willow Street, Apt. 56B, Greenwood District, San Francisco, CA 94107, United States</a></li>
+                        <li><a href="#" class="d-flex align-items-center"><i class="fa-solid fa-phone"></i>+91 0000 000
+                                000</a></li>
+                        <li><a href="#" class="d-flex align-items-center"><i
+                                    class="fa-solid fa-envelope"></i>Johndeo123@gmail.com</a></li>
+                        <li><a href="#"><i class="fa-solid fa-location-dot"></i>234 Willow Street, Apt. 56B, Greenwood
+                                District, San Francisco, CA 94107, United States</a></li>
                     </ul>
                 </div>
             </div>
         </div>
     </footer>
-    <div class="f-bottom">© 2025 ICARUS Wealth. All Rights Reserved.</div>
+    <div class="f-bottom">© 2025 ICARUS Wealth. All Rights Reserved. Design & Developed by <a href="https://inspirefox.com/" target="_blank" class="text-white text-decoration-underline">Inspirefox.</a></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
 </body>
