All paeges updaadded

--- a/education-hub.html
+++ b/education-hub.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Icarus Wealth - Education Hub</title>
+    <title>Indian Mutual Fund Investment Education Hub | Icarus Wealth </title>
+    <meta name="description"
+        content="Learn how to invest in India with simple guides, tips, and resources. Your go-to hub for mutual fund knowledge and smart online investing. ">
     <link rel="shortcut icon" href="./favicon.png" type="image/x-icon">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
@@ -61,11 +63,12 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
-                        <h1 class="small-banner-title fw-bold text-black">Your Gateway to Financial Wisdom</h1>
-                        <p class="banner-para text-black">Explore courses, articles, and tools designed to help you
-                            become a smarter investor.</p>
+                        <h1 class="small-banner-title fw-bold text-black">Insights for Smarter Investing in India </h1>
+                        <p class="banner-para text-black">Explore articles, guides and market updates to help you invest
+                            in India with confidence. We cover everything from beginner tips to in-depth mutual funds
+                            analysis. </p>
                         <a href="contact.html" class="btn btn-custom btn-gradient">
-                            Get Started
+                            Download The App
                             <img src="images/icons/rocket-gradient.svg" alt="rocket-icon" class="btn-icon bg-white">
                         </a>
                     </div>
@@ -273,43 +276,43 @@
                     <img src="images/footer-logo.png" alt="logo" class="f-logo">
                     <p class="f-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                         incididunt ut labore et dolore magna.</p>
-                    <ul class="d-flex gap-2 list-unstyled">
+                    <ul class="d-flex gap-3 list-unstyled">
                         <li><a href="#" class="f-icon bg-white"><i class="fa-brands fa-facebook-f"></i></a></li>
                         <li><a href="#" class="f-icon bg-white"><i class="fa-brands fa-instagram"></i></a></li>
                         <li><a href="#" class="f-icon bg-white"><i class="fa-brands fa-twitter"></i></a></li>
                     </ul>
                 </div>
                 <div class="col-lg-2 col-md-6 col-12 my-md-0 my-sm-4 my-3">
-                    <h5 class="f-title">Link</h5>
+                    <h5 class="f-title text-sm-start text-center">Link</h5>
                     <ul class="list-unstyled f-links">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Education Hub</a></li>
-                        <li><a href="#">Investment</a></li>
-                        <li><a href="#">About us</a></li>
-                        <li><a href="#">Contact us</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="education-hub.html">Education Hub</a></li>
+                        <li><a href="investment.html">Investment</a></li>
+                        <li><a href="about-us.html">About us</a></li>
+                        <li><a href="contact.html">Contact us</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12 my-md-0 my-sm-4 my-3">
                     <div class="row">
                         <div class="col-lg-6">
-                            <h5 class="f-title">Learn</h5>
+                            <h5 class="f-title text-sm-start text-center">Learn</h5>
                             <ul class="list-unstyled f-links">
-                                <li><a href="#">Education Hub</a></li>
-                                <li><a href="#">About us</a></li>
+                                <li><a href="education-hub.html">Education Hub</a></li>
+                                <li><a href="about-us.html">About us</a></li>
                             </ul>
                         </div>
                         <div class="col-lg-6 mt-md-0 mt-sm-4 mt-3">
-                            <h5 class="f-title">Supprot</h5>
+                            <h5 class="f-title text-sm-start text-center">Supprot</h5>
                             <ul class="list-unstyled f-links">
 
-                                <li><a href="#">FAQ</a></li>
-                                <li><a href="#">Contact us</a></li>
+                                <li><a href="faq.html">FAQ</a></li>
+                                <li><a href="contact.html">Contact us</a></li>
                             </ul>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-12 my-md-0 my-sm-4 my-3">
-                    <h5 class="f-title">Connect</h5>
+                    <h5 class="f-title text-sm-start text-center">Connect</h5>
                     <ul class="list-unstyled f-links">
                         <li><a href="#" class="d-flex align-items-center"><i class="fa-solid fa-phone"></i>+91 0000 000
                                 000</a></li>
@@ -322,8 +325,7 @@
             </div>
         </div>
     </footer>
-        <div class="f-bottom">© 2025 ICARUS Wealth. All Rights Reserved. Design & Developed by <a href="https://inspirefox.com/" target="_blank" class="text-white text-decoration-underline">Inspirefox.</a></div>
-
+    <div class="f-bottom">© 2025 ICARUS Wealth. All Rights Reserved.</div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
 </body>
