--- a/investment.html
+++ b/investment.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Icarus Wealth - Investment</title>
+    <title>Indian Mutual Fund Investment For Overseas Investors | Icarus</title>
+    <meta name="description"
+        content="Explore investment plans in India’s mutual funds. Start with $100, invest online easily, and grow wealth with zero brokerage or hidden fees. ">
     <link rel="shortcut icon" href="./favicon.png" type="image/x-icon">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
@@ -61,9 +63,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
-                        <h1 class="small-banner-title fw-bold text-black">Invest in Your Local Market</h1>
-                        <p class="banner-para text-black">Access 165+ New Zealand-listed Stocks, Funds, and ETFs with
-                            real-time market data and seamless trading experience.</p>
+                        <h1 class="small-banner-title fw-bold text-black">Invest in India with Ease. </h1>
+                        <p class="banner-para text-black">Set up your Indian stock market investment plan with access to
+                            100 top-performing mutual funds. </p>
                         <a href="contact.html" class="btn btn-custom btn-gradient">
                             Get Started
                             <img src="images/icons/rocket-gradient.svg" alt="rocket-icon" class="btn-icon bg-white">
@@ -77,10 +79,147 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h2 class="sec-title text-center">Explore Your Investment Options</h2>
-                        <p class="para text-black text-center opacity-75 col-lg-5 mx-auto">Choose from a variety of investment opportunities tailored to your financial goals and risk appetite.</p>
+                        <h2 class="sec-title text-center">Your Money, Your Way. </h2>
+                        <p class="para text-black text-center opacity-75 col-lg-5 mx-auto">Our flexible investment
+                            options allow you to grow your wealth in a way that fits your lifestyle and comfort level.
+                        </p>
                     </div>
                 </div>
+                <div class="row mt-lg-4 justify-content-center">
+                    <div class="col-lg-4 col-md-6 col-12 my-3">
+                        <div class="invest-card">
+                            <span class="pb-4 invest-icon">
+                                <img src="images/icons/invest-icon-1.svg" class="">
+                            </span>
+                            <h2 class="investcard-heading py-3">Self-Invest </h2>
+
+                            <ul class="invest-list list-unstyled">
+                                <li>For investors who like to be actively involved, Self Invest gives you the
+                                    flexibility to choose which funds to invest in and when. </li>
+
+                            </ul>
+                            <a href="contact.html" class="btn btn-custom btn-gradient">
+                                Get Started
+                                <img src="images/icons/rocket-gradient.svg" alt="rocket-icon" class="btn-icon bg-white">
+                            </a>
+                        </div>
+
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-12 my-3">
+                        <div class="invest-card-2">
+                            <span class="pb-4 invest-icon-2">
+                                <img src="images/icons/invest-icon-2.svg">
+                            </span>
+                            <h2 class="investcard-heading-2 py-3">Goal-Based Investing </h2>
+
+                            <ul class="invest-list-2 list-unstyled">
+                                <li>Set your goal amount and time frame and use our reports, analysis and guides on our
+                                    education hub to take informed investing decisions </li>
+
+                            </ul>
+                            <a href="contact.html" class="btn btn-custom btn-white mx-lg-0 mx-auto">
+                                Get Started
+                                <img src="images/icons/rocket-white.svg" alt="rocket-icon" class="btn-icon bg-primary">
+                            </a>
+                        </div>
+
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-12 my-3">
+                        <div class="invest-card">
+                            <span class="pb-4 invest-icon">
+                                <img src="images/icons/invest-icon-3.svg">
+                            </span>
+                            <h2 class="investcard-heading py-3">Auto-Invest </h2>
+
+                            <ul class="invest-list list-unstyled">
+                                <li>(Coming soon)
+
+                                    For investors who want a hands-off approach, Auto Invest lets you set up recurring
+                                    investments into your chosen Indian mutual funds. </li>
+
+                            </ul>
+                            <a href="contact.html" class="btn btn-custom btn-gradient">
+                                Get Started
+                                <img src="images/icons/rocket-gradient.svg" alt="rocket-icon" class="btn-icon bg-white">
+                            </a>
+                        </div>
+
+                    </div>
+                </div>
+        </section>
+        <section class="features-section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <h2 class="sec-title text-center">Why Invest Abroad with Icarus? </h2>
+                        <p class="para text-black mx-auto col-lg-6 text-center">We ensure your investments meet strict
+                            compliance and safety standards while giving you full control, zero hidden costs, and a
+                            simple, transparent way to invest in India. </p>
+                    </div>
+                </div>
+                <div class="row py-sm-5 py-3 d-flex align-items-center">
+                    <div class="col-md-6 h-100">
+                        <div class="d-flex trade-box gap-3  my-3">
+                            <div class="">
+                                <span class="trade-icon">
+                                    <img src="images/icons/trade-icon-1.svg">
+                                </span>
+                            </div>
+                            <div class="trade-text">
+                                <p class="trade-txt-1">Access India’s Growing Economy </p>
+                                <p class="trade-txt-2">The Indian market is a strong choice for global diversification
+                                    due to its consistent growth over the last decade.</p>
+                            </div>
+                        </div>
+                        <div class="d-flex trade-box gap-3 my-3">
+                            <div class="">
+                                <span class="trade-icon">
+                                    <img src="images/icons/trade-icon-2.svg">
+                                </span>
+                            </div>
+                            <div class="trade-text">
+                                <p class="trade-txt-1">Low Minimum Investment </p>
+                                <p class="trade-txt-2">Start with as little as $100, making it easy for anyone to begin
+                                    building their wealth in India’s mutual fund market </p>
+                            </div>
+                        </div>
+                        <div class="d-flex trade-box gap-3 my-3 ">
+                            <div class="">
+                                <span class="trade-icon">
+                                    <img src="images/icons/trade-icon-3.svg">
+                                </span>
+                            </div>
+                            <div class="trade-text">
+                                <p class="trade-txt-1">Specially Curated Funds </p>
+                                <p class="trade-txt-2">We’ve handpicked 100 high-performing, trustworthy funds to give
+                                    you a ready-to-invest selection. </p>
+                            </div>
+                        </div>
+
+                        <div class="d-flex trade-box gap-3 my-3">
+                            <div class="">
+                                <span class="trade-icon">
+                                    <img src="images/icons/trade-icon-4.svg">
+                                </span>
+                            </div>
+                            <div class="trade-text">
+                                <p class="trade-txt-1">Full Transparency & Security </p>
+                                <p class="trade-txt-2">SEBI-regulated funds and clear, easy-to-understand information at
+                                    every step of your overseas investment journey. </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6 h-100">
+
+                        <div class="trade-obj-box ">
+                            <img src="images/trade-object.svg" class="w-100">
+                        </div>
+                    </div>
+
+
+                </div>
+
             </div>
         </section>
     </main>
@@ -92,43 +231,43 @@
                     <img src="images/footer-logo.png" alt="logo" class="f-logo">
                     <p class="f-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                         incididunt ut labore et dolore magna.</p>
-                    <ul class="d-flex gap-2 list-unstyled">
+                    <ul class="d-flex gap-3 list-unstyled">
                         <li><a href="#" class="f-icon bg-white"><i class="fa-brands fa-facebook-f"></i></a></li>
                         <li><a href="#" class="f-icon bg-white"><i class="fa-brands fa-instagram"></i></a></li>
                         <li><a href="#" class="f-icon bg-white"><i class="fa-brands fa-twitter"></i></a></li>
                     </ul>
                 </div>
                 <div class="col-lg-2 col-md-6 col-12 my-md-0 my-sm-4 my-3">
-                    <h5 class="f-title">Link</h5>
+                    <h5 class="f-title text-sm-start text-center">Link</h5>
                     <ul class="list-unstyled f-links">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Education Hub</a></li>
-                        <li><a href="#">Investment</a></li>
-                        <li><a href="#">About us</a></li>
-                        <li><a href="#">Contact us</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="education-hub.html">Education Hub</a></li>
+                        <li><a href="investment.html">Investment</a></li>
+                        <li><a href="about-us.html">About us</a></li>
+                        <li><a href="contact.html">Contact us</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12 my-md-0 my-sm-4 my-3">
                     <div class="row">
                         <div class="col-lg-6">
-                            <h5 class="f-title">Learn</h5>
+                            <h5 class="f-title text-sm-start text-center">Learn</h5>
                             <ul class="list-unstyled f-links">
-                                <li><a href="#">Education Hub</a></li>
-                                <li><a href="#">About us</a></li>
+                                <li><a href="education-hub.html">Education Hub</a></li>
+                                <li><a href="about-us.html">About us</a></li>
                             </ul>
                         </div>
                         <div class="col-lg-6 mt-md-0 mt-sm-4 mt-3">
-                            <h5 class="f-title">Supprot</h5>
+                            <h5 class="f-title text-sm-start text-center">Supprot</h5>
                             <ul class="list-unstyled f-links">
 
-                                <li><a href="#">FAQ</a></li>
-                                <li><a href="#">Contact us</a></li>
+                                <li><a href="faq.html">FAQ</a></li>
+                                <li><a href="contact.html">Contact us</a></li>
                             </ul>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-12 my-md-0 my-sm-4 my-3">
-                    <h5 class="f-title">Connect</h5>
+                    <h5 class="f-title text-sm-start text-center">Connect</h5>
                     <ul class="list-unstyled f-links">
                         <li><a href="#" class="d-flex align-items-center"><i class="fa-solid fa-phone"></i>+91 0000 000
                                 000</a></li>
@@ -141,8 +280,7 @@
             </div>
         </div>
     </footer>
-        <div class="f-bottom">© 2025 ICARUS Wealth. All Rights Reserved. Design & Developed by <a href="https://inspirefox.com/" target="_blank" class="text-white text-decoration-underline">Inspirefox.</a></div>
-
+    <div class="f-bottom">© 2025 ICARUS Wealth. All Rights Reserved.</div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
 </body>
