--- a/about-us.html
+++ b/about-us.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Icarus Wealth - About us</title>
+    <title>About Icarus Wealth | Invest in Indian Mutual Fund with Trust </title>
+    <meta name="description"
+        content="Discover Icarus Wealth, your trusted platform to invest in India online. Learn our vision, mission, and how we make Indian market investing accessible worldwide. ">
     <link rel="shortcut icon" href="./favicon.png" type="image/x-icon">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
@@ -46,7 +48,7 @@
                         </li>
                     </ul>
                     <div class="d-flex justify-content-center align-items-center">
-                         <a href="contact.html" class="btn btn-custom btn-white mx-lg-0 mx-auto">
+                        <a href="contact.html" class="btn btn-custom btn-white mx-lg-0 mx-auto">
                             Get Started
                             <img src="images/icons/rocket-white.svg" alt="rocket-icon" class="btn-icon bg-primary">
                         </a>
@@ -55,7 +57,153 @@
             </div>
         </nav>
     </header>
+    <main>
+        <!-- banner section -->
+        <section class="small-banner about-banner">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <h1 class="small-banner-title fw-bold text-black">About Us</h1>
+                        <p class="banner-para text-black">Empowering investors we help individuals grow their wealth
+                            with smart investing</p>
+                        <a href="contact.html" class="btn btn-custom btn-gradient">
+                            Download The App
+                            <img src="images/icons/rocket-gradient.svg" alt="rocket-icon" class="btn-icon bg-white">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- section-1 -->
+        <section class="py-100 ">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
 
+
+                        <h2 class="sec-title text-center">Removing the Barriers of Overseas Investing</h2>
+                        <p class="para text-black text-center opacity-75 col-lg-5 mx-auto">At Icarus Wealth, we’re
+                            helping foreign investors access Indian market opportunities through a simple, secure, and
+                            low-cost app.
+                        </p>
+                    </div>
+                </div>
+                <div class="row py-4 align-items-center align-content-center text-center text-md-start">
+                    <div class="col-md-6">
+                        <p class="abt-txt-1">Who We Are </p>
+                        <p class="abt-txt-2">Founded in Wellington, New Zealand, we specialise in maximising ROI,
+                            building diverse portfolios, and creating strategies that generate passive income and
+                            long-term financial freedom.
+                        </p>
+                    </div>
+                    <div class="col-md-6 d-flex justify-content-center">
+
+                        <div class="p-5 about-obj ">
+                            <img src="images/about-obj-1.svg" alt="about page object" class="h-100 about-obj-img w-100">
+                        </div>
+                    </div>
+                </div>
+
+                <div
+                    class="row py-3 align-items-center align-content-center flex-wrap-reverse text-center text-md-start">
+                    <div class="col-md-6 d-flex justify-content-center">
+                        <div class="p-5  about-obj ">
+                            <img src="images/about-obj-2.svg" alt="about page object"
+                                class="h-100 about-obj-img  w-100">
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <p class="abt-txt-1">Our Mission </p>
+                        <p class="abt-txt-2">To empower everyday investors by providing a secure, user-friendly platform
+                            that enables them to capitalise on the opportunities in India’s growing financial markets,
+                            while minimising costs and maximising growth potential.
+                        </p>
+                    </div>
+
+                </div>
+                <div class="row py-3 align-items-center align-content-center  text-center text-md-start">
+
+                    <div class="col-md-6">
+                        <p class="abt-txt-1">Our Commitment </p>
+                        <p class="abt-txt-2">We are committed to transparency, security, and simplicity. Investing your
+                            hard-earned money should not feel overwhelming or risky. With Icarus Wealth, you’re backed
+                            by a platform that is transparent, simple, secure and designed to put the investor first.
+                        </p>
+                    </div>
+                    <div class="col-md-6 d-flex justify-content-center">
+                        <div class="p-5  about-obj ">
+                            <img src="images/about-obj-3.svg" alt="about page object"
+                                class="h-100 about-obj-img  w-100">
+                        </div>
+                    </div>
+                </div>
+        </section>
+
+        <section class="py-100">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <h2 class="sec-title text-center">Your Bridge to India’s Growing Market </h2>
+                        <p class="para text-black text-center opacity-75 col-lg-5 mx-auto">We simplify the process and
+                            help you make confident investment decisions, no matter where you are. Here’s what you can
+                            expect when you invest abroad with us: </p>
+                    </div>
+
+                </div>
+                <div class="row mt-lg-4 justify-content-center">
+                    <div class="col-lg-4 col-md-6 col-12 my-3">
+                        <div class="invest-card py-5">
+                            <span class="pb-4 invest-icon">
+                                <img src="images/icons/about-icon-1.svg" class="">
+                            </span>
+                            <h2 class="about-heading py-3">Seamless Onboarding </h2>
+
+                            <ul class="about-text list-unstyled m-0">
+                                <li>Simply sign up on our website or our app and browse through list of selected high
+                                    performing mutual funds. Choose a fund and start investing. </li>
+
+                            </ul>
+
+                        </div>
+
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-12 my-3">
+                        <div class="invest-card-2 py-5">
+                            <span class="pb-4 invest-icon-2">
+                                <img src="images/icons/about-icon-2.svg" class="">
+                            </span>
+                            <h2 class="about-heading-2 py-3">Transparent Processes </h2>
+
+                            <ul class="about-text-2  list-unstyled m-0">
+                                <li>No hidden costs or confusing jargon. Just clear, straightforward communication so
+                                    you always know where your money is and how it’s performing.</li>
+
+                            </ul>
+
+                        </div>
+
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-12 my-3">
+                        <div class="invest-card py-5">
+                            <span class="pb-4 invest-icon">
+                                <img src="images/icons/invest-icon-3.svg" class="">
+                            </span>
+                            <h2 class="about-heading py-3">Security and Compliance First </h2>
+
+                            <ul class="about-text  list-unstyled m-0">
+                                <li>Your overseas investments are managed with strict safety standards, top-tier
+                                    compliance measures, and trusted custodians to safeguard your capital.
+
+                                </li>
+
+                            </ul>
+
+                        </div>
+
+                    </div>
+                </div>
+        </section>
+    </main>
 
     <footer>
         <div class="container">
@@ -64,43 +212,43 @@
                     <img src="images/footer-logo.png" alt="logo" class="f-logo">
                     <p class="f-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                         incididunt ut labore et dolore magna.</p>
-                    <ul class="d-flex gap-2 list-unstyled">
+                    <ul class="d-flex gap-3 list-unstyled">
                         <li><a href="#" class="f-icon bg-white"><i class="fa-brands fa-facebook-f"></i></a></li>
                         <li><a href="#" class="f-icon bg-white"><i class="fa-brands fa-instagram"></i></a></li>
                         <li><a href="#" class="f-icon bg-white"><i class="fa-brands fa-twitter"></i></a></li>
                     </ul>
                 </div>
                 <div class="col-lg-2 col-md-6 col-12 my-md-0 my-sm-4 my-3">
-                    <h5 class="f-title">Link</h5>
+                    <h5 class="f-title text-sm-start text-center">Link</h5>
                     <ul class="list-unstyled f-links">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Education Hub</a></li>
-                        <li><a href="#">Investment</a></li>
-                        <li><a href="#">About us</a></li>
-                        <li><a href="#">Contact us</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="education-hub.html">Education Hub</a></li>
+                        <li><a href="investment.html">Investment</a></li>
+                        <li><a href="about-us.html">About us</a></li>
+                        <li><a href="contact.html">Contact us</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12 my-md-0 my-sm-4 my-3">
                     <div class="row">
                         <div class="col-lg-6">
-                            <h5 class="f-title">Learn</h5>
+                            <h5 class="f-title text-sm-start text-center">Learn</h5>
                             <ul class="list-unstyled f-links">
-                                <li><a href="#">Education Hub</a></li>
-                                <li><a href="#">About us</a></li>
+                                <li><a href="education-hub.html">Education Hub</a></li>
+                                <li><a href="about-us.html">About us</a></li>
                             </ul>
                         </div>
                         <div class="col-lg-6 mt-md-0 mt-sm-4 mt-3">
-                            <h5 class="f-title">Supprot</h5>
+                            <h5 class="f-title text-sm-start text-center">Supprot</h5>
                             <ul class="list-unstyled f-links">
 
-                                <li><a href="#">FAQ</a></li>
-                                <li><a href="#">Contact us</a></li>
+                                <li><a href="faq.html">FAQ</a></li>
+                                <li><a href="contact.html">Contact us</a></li>
                             </ul>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-12 my-md-0 my-sm-4 my-3">
-                    <h5 class="f-title">Connect</h5>
+                    <h5 class="f-title text-sm-start text-center">Connect</h5>
                     <ul class="list-unstyled f-links">
                         <li><a href="#" class="d-flex align-items-center"><i class="fa-solid fa-phone"></i>+91 0000 000
                                 000</a></li>
@@ -113,8 +261,7 @@
             </div>
         </div>
     </footer>
-        <div class="f-bottom">© 2025 ICARUS Wealth. All Rights Reserved. Design & Developed by <a href="https://inspirefox.com/" target="_blank" class="text-white text-decoration-underline">Inspirefox.</a></div>
-
+    <div class="f-bottom">© 2025 ICARUS Wealth. All Rights Reserved.</div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
 </body>
