--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Icarus Wealth - Contact us</title>
+    <title>Contact Us | Invest in India Online | Icarus Wealth </title>
+    <meta name="description"
+        content="Get in touch with Icarus Wealth for support, questions, or investment advice. Helping global investors access India’s mutual funds with ease and transparency. ">
     <link rel="shortcut icon" href="./favicon.png" type="image/x-icon">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
@@ -41,8 +43,8 @@
                         <li class="nav-item">
                             <a class="nav-link " href="about-us.html">About us</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="contact.html">Contact</a>
+                        <li class="nav-item mb-2">
+                            <a class="nav-link active " href="contact.html">Contact</a>
                         </li>
                     </ul>
                     <div class="d-flex justify-content-center align-items-center">
@@ -55,6 +57,64 @@
             </div>
         </nav>
     </header>
+    <main>
+        <!-- Banner Section -->
+        <section class="small-banner contact-banner">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <h1 class="small-banner-title fw-bold text-black">Invest Today, The Market’s Only Soaring Higher
+                        </h1>
+                        <p class="banner-para text-black">Have a question about how to invest abroad, need help with
+                            your account, or just want to learn more about our platform? We’re here to help. </p>
+                        <a href="contact.html" class="btn btn-custom btn-gradient">
+                            Get Started
+                            <img src="images/icons/rocket-gradient.svg" alt="rocket-icon" class="btn-icon bg-white">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="py-100">
+            <div class="container">
+                <div class="row py-4 align-items-center align-content-center ">
+                    <div class="col-md-6 ">
+                        <p class="abt-txt-1 pb-4 text-md-start">Get in touch</p>
+
+                        <form class=" ">
+                            <div class="mb-3">
+                                <label for="name" class="form-label">Name</label>
+                                <input type="text" id="name" class="form-control" placeholder="John deo">
+                            </div>
+                            <div class="mb-3">
+                                <label for="email" class="form-label">Email</label>
+                                <input type="email" id="email" class="form-control" placeholder="Email"
+                                    class="input-data">
+                            </div>
+                            <div class="mb-3">
+                                <label for="message" class="form-label">Message</label>
+                                <textarea id="message" class="form-control mb-4" rows="4"
+                                    placeholder="Message"></textarea>
+                            </div>
+                            <a href="contact.html" class="btn btn-custom btn-gradient">
+                                Get Started
+                                <img src="images/icons/rocket-gradient.svg" alt="rocket-icon"
+                                    class="btn-icon bg-white ">
+                            </a>
+                        </form>
+                    </div>
+                    <div class="col-md-6 d-flex justify-content-center py-5 py-md-0">
+                        <div class="p-5 about-obj">
+                            <img src="images/contact-object.svg" alt="about page object"
+                                class="h-100 about-obj-img w-100">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+    </main>
 
 
     <footer>
@@ -64,43 +124,43 @@
                     <img src="images/footer-logo.png" alt="logo" class="f-logo">
                     <p class="f-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                         incididunt ut labore et dolore magna.</p>
-                    <ul class="d-flex gap-2 list-unstyled">
+                    <ul class="d-flex gap-3 list-unstyled">
                         <li><a href="#" class="f-icon bg-white"><i class="fa-brands fa-facebook-f"></i></a></li>
                         <li><a href="#" class="f-icon bg-white"><i class="fa-brands fa-instagram"></i></a></li>
                         <li><a href="#" class="f-icon bg-white"><i class="fa-brands fa-twitter"></i></a></li>
                     </ul>
                 </div>
                 <div class="col-lg-2 col-md-6 col-12 my-md-0 my-sm-4 my-3">
-                    <h5 class="f-title">Link</h5>
+                    <h5 class="f-title text-sm-start text-center">Link</h5>
                     <ul class="list-unstyled f-links">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Education Hub</a></li>
-                        <li><a href="#">Investment</a></li>
-                        <li><a href="#">About us</a></li>
-                        <li><a href="#">Contact us</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="education-hub.html">Education Hub</a></li>
+                        <li><a href="investment.html">Investment</a></li>
+                        <li><a href="about-us.html">About us</a></li>
+                        <li><a href="contact.html">Contact us</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12 my-md-0 my-sm-4 my-3">
                     <div class="row">
                         <div class="col-lg-6">
-                            <h5 class="f-title">Learn</h5>
+                            <h5 class="f-title text-sm-start text-center">Learn</h5>
                             <ul class="list-unstyled f-links">
-                                <li><a href="#">Education Hub</a></li>
-                                <li><a href="#">About us</a></li>
+                                <li><a href="education-hub.html">Education Hub</a></li>
+                                <li><a href="about-us.html">About us</a></li>
                             </ul>
                         </div>
                         <div class="col-lg-6 mt-md-0 mt-sm-4 mt-3">
-                            <h5 class="f-title">Supprot</h5>
+                            <h5 class="f-title text-sm-start text-center">Supprot</h5>
                             <ul class="list-unstyled f-links">
 
-                                <li><a href="#">FAQ</a></li>
-                                <li><a href="#">Contact us</a></li>
+                                <li><a href="faq.html">FAQ</a></li>
+                                <li><a href="contact.html">Contact us</a></li>
                             </ul>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-12 my-md-0 my-sm-4 my-3">
-                    <h5 class="f-title">Connect</h5>
+                    <h5 class="f-title text-sm-start text-center">Connect</h5>
                     <ul class="list-unstyled f-links">
                         <li><a href="#" class="d-flex align-items-center"><i class="fa-solid fa-phone"></i>+91 0000 000
                                 000</a></li>
@@ -113,8 +173,7 @@
             </div>
         </div>
     </footer>
-        <div class="f-bottom">© 2025 ICARUS Wealth. All Rights Reserved. Design & Developed by <a href="https://inspirefox.com/" target="_blank" class="text-white text-decoration-underline">Inspirefox.</a></div>
-
+    <div class="f-bottom">© 2025 ICARUS Wealth. All Rights Reserved.</div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
 </body>
