--- a/education-hub.html
+++ b/education-hub.html
@@ -304,8 +304,7 @@
                         <div class="col-lg-6 mt-md-0 mt-sm-4 mt-3">
                             <h5 class="f-title text-sm-start text-center">Supprot</h5>
                             <ul class="list-unstyled f-links">
-
-                                <li><a href="faq.html">FAQ</a></li>
+                                <li><a href="index.html#faqpage">FAQ</a></li>
                                 <li><a href="contact.html">Contact us</a></li>
                             </ul>
                         </div>
@@ -314,12 +313,12 @@
                 <div class="col-lg-3 col-md-6 col-12 my-md-0 my-sm-4 my-3">
                     <h5 class="f-title text-sm-start text-center">Connect</h5>
                     <ul class="list-unstyled f-links">
-                        <li><a href="#" class="d-flex align-items-center"><i class="fa-solid fa-phone"></i>+91 0000 000
-                                000</a></li>
+                        <!-- <li><a href="#" class="d-flex align-items-center"><i class="fa-solid fa-phone"></i>+91 0000 000
+                                000</a></li> -->
                         <li><a href="#" class="d-flex align-items-center"><i
-                                    class="fa-solid fa-envelope"></i>Johndeo123@gmail.com</a></li>
-                        <li><a href="#"><i class="fa-solid fa-location-dot"></i>234 Willow Street, Apt. 56B, Greenwood
-                                District, San Francisco, CA 94107, United States</a></li>
+                                    class="fa-solid fa-envelope"></i>support@icaruswealth.co.nz</a></li>
+
+                        <li><a href="#"><i class="fa-solid fa-location-dot"></i>2/10 Stewart Drive, Newlands, Wellington, 6037</a></li>
                     </ul>
                 </div>
             </div>
