--- a/investment.html
+++ b/investment.html
@@ -98,10 +98,10 @@
                                     flexibility to choose which funds to invest in and when. </li>
 
                             </ul>
-                            <a href="contact.html" class="btn btn-custom btn-gradient">
+                            <!-- <a href="contact.html" class="btn btn-custom btn-gradient">
                                 Get Started
                                 <img src="images/icons/rocket-gradient.svg" alt="rocket-icon" class="btn-icon bg-white">
-                            </a>
+                            </a> -->
                         </div>
 
                     </div>
@@ -114,13 +114,15 @@
 
                             <ul class="invest-list-2 list-unstyled">
                                 <li>Set your goal amount and time frame and use our reports, analysis and guides on our
-                                    education hub to take informed investing decisions </li>
+                                    <a href="education-hub.html" class="text-decoration-none text-white">education
+                                        hub</a> to take informed investing decisions
+                                </li>
 
                             </ul>
-                            <a href="contact.html" class="btn btn-custom btn-white mx-lg-0 mx-auto">
+                            <!-- <a href="contact.html" class="btn btn-custom btn-white mx-lg-0 mx-auto">
                                 Get Started
                                 <img src="images/icons/rocket-white.svg" alt="rocket-icon" class="btn-icon bg-primary">
-                            </a>
+                            </a> -->
                         </div>
 
                     </div>
@@ -138,10 +140,10 @@
                                     investments into your chosen Indian mutual funds. </li>
 
                             </ul>
-                            <a href="contact.html" class="btn btn-custom btn-gradient">
+                            <!-- <a href="contact.html" class="btn btn-custom btn-gradient">
                                 Get Started
                                 <img src="images/icons/rocket-gradient.svg" alt="rocket-icon" class="btn-icon bg-white">
-                            </a>
+                            </a> -->
                         </div>
 
                     </div>
@@ -260,7 +262,9 @@
                             <h5 class="f-title text-sm-start text-center">Supprot</h5>
                             <ul class="list-unstyled f-links">
 
-                                <li><a href="faq.html">FAQ</a></li>
+                                <li>
+                                <li><a href="index.html#faqpage">FAQ</a></li>
+
                                 <li><a href="contact.html">Contact us</a></li>
                             </ul>
                         </div>
@@ -269,12 +273,13 @@
                 <div class="col-lg-3 col-md-6 col-12 my-md-0 my-sm-4 my-3">
                     <h5 class="f-title text-sm-start text-center">Connect</h5>
                     <ul class="list-unstyled f-links">
-                        <li><a href="#" class="d-flex align-items-center"><i class="fa-solid fa-phone"></i>+91 0000 000
-                                000</a></li>
+                        <!-- <li><a href="#" class="d-flex align-items-center"><i class="fa-solid fa-phone"></i>+91 0000 000
+                                000</a></li> -->
                         <li><a href="#" class="d-flex align-items-center"><i
-                                    class="fa-solid fa-envelope"></i>Johndeo123@gmail.com</a></li>
-                        <li><a href="#"><i class="fa-solid fa-location-dot"></i>234 Willow Street, Apt. 56B, Greenwood
-                                District, San Francisco, CA 94107, United States</a></li>
+                                    class="fa-solid fa-envelope"></i>support@icaruswealth.co.nz</a></li>
+
+                        <li><a href="#"><i class="fa-solid fa-location-dot"></i>2/10 Stewart Drive, Newlands,
+                                Wellington, 6037</a></li>
                     </ul>
                 </div>
             </div>
