--- a/about-us.html
+++ b/about-us.html
@@ -78,7 +78,7 @@
         <section class="py-100 ">
             <div class="container">
                 <div class="row">
-                    <div class="col-12">
+                    <div class="col-12 py-3">
 
 
                         <h2 class="sec-title text-center">Removing the Barriers of Overseas Investing</h2>
@@ -86,6 +86,13 @@
                             helping foreign investors access Indian market opportunities through a simple, secure, and
                             low-cost app.
                         </p>
+                        <div class="d-flex py-4 align-content-center justify-content-center">
+                            <a href="contact.html" class="btn btn-custom btn-gradient">
+                                Download The App
+                                <img src="images/icons/rocket-gradient.svg" alt="rocket-icon" class="btn-icon bg-white">
+                            </a>
+                        </div>
+
                     </div>
                 </div>
                 <div class="row py-4 align-items-center align-content-center text-center text-md-start">
@@ -241,7 +248,9 @@
                             <h5 class="f-title text-sm-start text-center">Supprot</h5>
                             <ul class="list-unstyled f-links">
 
-                                <li><a href="faq.html">FAQ</a></li>
+                                <li>
+                                <li><a href="index.html#faqpage">FAQ</a></li>
+
                                 <li><a href="contact.html">Contact us</a></li>
                             </ul>
                         </div>
@@ -250,12 +259,13 @@
                 <div class="col-lg-3 col-md-6 col-12 my-md-0 my-sm-4 my-3">
                     <h5 class="f-title text-sm-start text-center">Connect</h5>
                     <ul class="list-unstyled f-links">
-                        <li><a href="#" class="d-flex align-items-center"><i class="fa-solid fa-phone"></i>+91 0000 000
-                                000</a></li>
+                        <!-- <li><a href="#" class="d-flex align-items-center"><i class="fa-solid fa-phone"></i>+91 0000 000
+                                000</a></li> -->
                         <li><a href="#" class="d-flex align-items-center"><i
-                                    class="fa-solid fa-envelope"></i>Johndeo123@gmail.com</a></li>
-                        <li><a href="#"><i class="fa-solid fa-location-dot"></i>234 Willow Street, Apt. 56B, Greenwood
-                                District, San Francisco, CA 94107, United States</a></li>
+                                    class="fa-solid fa-envelope"></i>support@icaruswealth.co.nz</a></li>
+
+                        <li><a href="#"><i class="fa-solid fa-location-dot"></i>2/10 Stewart Drive, Newlands,
+                                Wellington, 6037</a></li>
                     </ul>
                 </div>
             </div>
