--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <h1 class="hero-title">Track, Invest, and Profit from Indian Stock Market </h1>
                 <p class="hero-subtitle mt-3 mb-5">Access and invest in more than 100 top Indian mutual funds from
                     anywhere in the world and become a smart investor. </p>
-                <div class="d-flex align-content-center justify-content-center">
+                <div class="d-flex align-content-center justify-content-center flex-wrap gap-3">
                     <a href="investment.html" class="btn btn-custom btn-green btn-lg mx-2 ">
                         Start Investing <img src="images/icons/rocket-white.svg" alt="rocket-icon"
                             class="btn-icon bg-primary">
